# Stereo-Depth-Reconstruction

./: CMakeLists.txt  README.md
data/artroom1/: calib.txt
src/: 3d_reconstruction.cpp  auxillaries.cpp  main.cpp
src/classes/: calibration_data.cpp  calibration_data.h  evaluation.cpp  evaluation.h  images.cpp  images.h
src/tools/: compute_hausdorff.cpp
